table overflow fix (#36)

--- a/_sass/algolia.scss
+++ b/_sass/algolia.scss
@@ -64,6 +64,8 @@
 }
 
 .page-snippet {
+  overflow: scroll;
+  max-height: 9rem;
   a {
     padding: 0;
   }
